# skrips_utils

./: .gitignore  README.rst  aps2s.py  environment.yml  pyproject.toml  skup.py  utils.py
docs/: conf.py  index.rst  requirements.txt  usage.rst
skrips_utils/: __init__.py  diffNML.py  mkMITgcmBC.py  mkMITgcmIC.py  showMITgcmVgrid.py  utils.py
skup/: main.py
skup/src/: GEO_DIM_VAR.py  bathymetry.py  geo_em.py  grid.py  mitgcm.py  utils.py  wrf.py
skup/src/bndini/: GLORYS_DAILY.yml
src/: bathymetry.py  grid.py  mkMITgcmIC.py  requirements.txt
src/skrips_utils/: diffNML.py  mkMITgcmBC.py  requirements.txt  showMITgcmVgrid.py  utils.py
