[tool.poetry]
name = "skup"
version = "0.1.0"
description = "Utilities for generating and postprocessing data of SKRIPS model"
authors = ["Prajeesh Ag <prajeeshag@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
xarray = "^2023.3.0"
mpl-interactions = "^0.22.2"
numpy = "1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skup = 'skup.main:app'

